--- a/FoodPiper/MakeReservationView.xib
+++ b/FoodPiper/MakeReservationView.xib
@@ -13,6 +13,7 @@
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date and Time of Reservation" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Miv-sa-gBe">
                     <rect key="frame" x="47" y="80" width="226" height="21"/>
                     <constraints>
+                        <constraint firstAttribute="width" constant="226" id="QGV-np-aCm"/>
                         <constraint firstAttribute="height" constant="21" id="aBX-8Y-KAY"/>
                     </constraints>
                     <fontDescription key="fontDescription" name="GillSans" family="Gill Sans" pointSize="17"/>
@@ -22,6 +23,7 @@
                 <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="fCY-8K-y7J">
                     <rect key="frame" x="8" y="115" width="304" height="30"/>
                     <constraints>
+                        <constraint firstAttribute="width" constant="304" id="7sf-kM-GHs"/>
                         <constraint firstAttribute="height" constant="30" id="HC2-De-CVl"/>
                     </constraints>
                     <fontDescription key="fontDescription" name="GillSans" family="Gill Sans" pointSize="24"/>
@@ -47,14 +49,12 @@
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
+                <constraint firstItem="fCY-8K-y7J" firstAttribute="centerX" secondItem="Miv-sa-gBe" secondAttribute="centerX" id="DjJ-P0-e8t"/>
                 <constraint firstItem="fCY-8K-y7J" firstAttribute="top" secondItem="Miv-sa-gBe" secondAttribute="bottom" constant="14" id="EbI-uC-yPg"/>
-                <constraint firstItem="Miv-sa-gBe" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="47" id="Qt3-Nz-yeM"/>
-                <constraint firstAttribute="trailing" secondItem="fCY-8K-y7J" secondAttribute="trailing" constant="8" id="XYE-kr-sh3"/>
                 <constraint firstItem="9V4-QW-s3E" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" constant="-4" id="Xsx-rf-rmS"/>
-                <constraint firstAttribute="trailing" secondItem="Miv-sa-gBe" secondAttribute="trailing" constant="47" id="Yy4-La-Pel"/>
                 <constraint firstItem="Cby-Wd-94C" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="dYH-ll-Kr0"/>
                 <constraint firstItem="Cby-Wd-94C" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="18" id="mOW-TD-94X"/>
-                <constraint firstItem="fCY-8K-y7J" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="8" id="n6f-CP-Kuy"/>
+                <constraint firstItem="Miv-sa-gBe" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="tUI-EG-Yez"/>
                 <constraint firstAttribute="bottom" secondItem="9V4-QW-s3E" secondAttribute="bottom" constant="12" id="vfk-xk-acB"/>
                 <constraint firstItem="Miv-sa-gBe" firstAttribute="top" secondItem="Cby-Wd-94C" secondAttribute="bottom" constant="22" id="yBT-rh-rPG"/>
             </constraints>
